# emf4cpp

./: CMakeLists.txt  README.md  TODO
XMLType/: CMakeLists.txt  LICENSE.md  bootstrap.sh  type.cmake  type.cpp  type.hpp  type.pri  type_forward.hpp
XMLType/type/: AnyType.cpp  AnyType.hpp  AnyTypeImpl.cpp  ProcessingInstruction.cpp  ProcessingInstruction.hpp  ProcessingInstructionImpl.cpp  SimpleAnyType.cpp  SimpleAnyType.hpp  SimpleAnyTypeImpl.cpp  TypeFactory.cpp  TypeFactory.hpp  TypeFactoryImpl.cpp  TypeItemDispatcher.hpp  TypePackage.cpp  TypePackage.hpp  TypePackageImpl.cpp  XMLTypeDocumentRoot.cpp  XMLTypeDocumentRoot.hpp  XMLTypeDocumentRootImpl.cpp  dllType.hpp
builds/: bootstrap.sh  cleanup.sh  generator-debug.sh  generator-release.sh
emf4cpp/: CMakeLists.txt  ecore.cmake  ecore.cpp  ecore.hpp  ecore.pri  ecore_forward.hpp  ecorecpp.cmake
emf4cpp.tests/: CMakeLists.txt  update-examples.sh
emf4cpp.tests/EOperationBody/: CMakeLists.txt  EOperationBody.cmake  EOperationBody.cpp  EOperationBody.ecore  EOperationBody.hpp  EOperationBody.pri  EOperationBody_forward.hpp
emf4cpp.tests/EOperationBody/EOperationBody/: EOperationBodyFactory.cpp  EOperationBodyFactory.hpp  EOperationBodyFactoryImpl.cpp  EOperationBodyItemDispatcher.hpp  EOperationBodyPackage.cpp  EOperationBodyPackage.hpp  EOperationBodyPackageImpl.cpp  Integer.cpp  Integer.hpp  IntegerImpl.cpp  dllEOperationBody.hpp
emf4cpp.tests/EOperationBody/test/: CMakeLists.txt  test.cpp
emf4cpp.tests/EndUserLicense/: CMakeLists.txt  enduserlicense.cmake  enduserlicense.cpp  enduserlicense.hpp  enduserlicense.pri  enduserlicense_forward.hpp
emf4cpp.tests/EndUserLicense/enduserlicense/: EnduserlicenseFactory.cpp  EnduserlicenseFactory.hpp  EnduserlicenseFactoryImpl.cpp  EnduserlicenseItemDispatcher.hpp  EnduserlicensePackage.cpp  (+3 more)
emf4cpp.tests/PyEcore/: CMakeLists.txt
emf4cpp.tests/ReferenceSerialization/: CMakeLists.txt  ReferenceSerialization.cmake  ReferenceSerialization.cpp  ReferenceSerialization.ecore  ReferenceSerialization.hpp  ReferenceSerialization.pri  ReferenceSerialization_forward.hpp
emf4cpp.tests/ReferenceSerialization/test/: CMakeLists.txt  test-serialization.cpp
emf4cpp.tests/TargetVersion/: .gitignore  CMakeLists.txt  v_1_0_edate.cmake  v_1_0_edate.ecore  v_1_0_edate.pri  v_2_0_edate.cmake  v_2_0_edate.ecore  v_2_0_edate.pri  v_3_0_edate.cmake  v_3_0_edate.ecore  v_3_0_edate.pri
emf4cpp.tests/TargetVersion/test/: CMakeLists.txt  main.cpp
emf4cpp.tests/ast/: CMakeLists.txt
emf4cpp.tests/company/: CMakeLists.txt  company.cmake  company.cpp  company.hpp  company.pri  company_forward.hpp
emf4cpp.tests/crossEcoreInheritance/: CMakeLists.txt  base.cmake  base.cpp  base.ecore  base.hpp  base.pri  base_forward.hpp  derived.cmake  derived.cpp  derived.ecore  derived.hpp  derived.pri  derived_forward.hpp
emf4cpp.tests/cst/: CMakeLists.txt  CST.cmake  CST.cpp  CST.hpp  CST.pri  CST_forward.hpp
emf4cpp.tests/edate/: CMakeLists.txt  edate.cmake  edate.cpp  edate.hpp  edate.pri  edate_forward.hpp
emf4cpp.tests/enumeration/: CMakeLists.txt  enumeration.cmake  enumeration.cpp  enumeration.hpp  enumeration.pri  enumeration_forward.hpp
emf4cpp.tests/eopposite/: CMakeLists.txt  eopposite.cmake  eopposite.cpp  eopposite.hpp  eopposite.pri  eopposite_forward.hpp
emf4cpp.tests/idlmm/: CMakeLists.txt  idlmm.cmake  idlmm.cpp  idlmm.hpp  idlmm.pri  idlmm_forward.hpp
emf4cpp.tests/json/: CMakeLists.txt  json.cmake  json.cpp  json.hpp  json.pri  json_forward.hpp
emf4cpp.tests/kdm/: CMakeLists.txt  kdm.cmake  kdm.cpp  kdm.hpp  kdm.pri  kdm_forward.hpp
emf4cpp.tests/mapping-tests/: CMakeLists.txt
emf4cpp.tests/mydsl/: CMakeLists.txt  myDsl.cmake  myDsl.cpp  myDsl.hpp  myDsl.pri  myDsl_forward.hpp
emf4cpp.tests/nil-reference/: CMakeLists.txt  nil-reference.ecore  nil.cmake  nil.cpp  nil.hpp  nil.pri  nil_forward.hpp
emf4cpp.tests/nil-reference/test/: CMakeLists.txt  nil.xmi  test-nil-reference.cpp
emf4cpp.tests/resource/: CMakeLists.txt  ResourceTests.cmake  ResourceTests.cpp  ResourceTests.ecore  ResourceTests.hpp  ResourceTests.pri  ResourceTests_forward.hpp
emf4cpp.tests/resource/test/: CMakeLists.txt  resourceoptions.xml  test-multiplerootobjects.cpp
emf4cpp.tests/subpackage/: CMakeLists.txt  TopLevelPackage.cmake  TopLevelPackage.cpp  TopLevelPackage.hpp  TopLevelPackage.pri  TopLevelPackage_forward.hpp  subpackage.ecore
emf4cpp.tests/svg/: CMakeLists.txt  PrimitiveTypes.cmake  PrimitiveTypes.cpp  PrimitiveTypes.hpp  PrimitiveTypes.pri  PrimitiveTypes_forward.hpp  SVG.cmake  SVG.cpp  SVG.hpp  SVG.pri  SVG_forward.hpp
emf4cpp.tests/tests/: CMakeLists.txt  read-metamodel.cpp
emf4cpp.tests/tree-bintree/: CMakeLists.txt  bintree.cmake  bintree.cpp  bintree.hpp  bintree.pri  bintree_forward.hpp  tree.cmake  tree.cpp  tree.hpp  tree.pri  tree_forward.hpp
emf4cpp.tests/tree-bintree/test/: CMakeLists.txt
emf4cpp.tests/treeiterator/: CMakeLists.txt  treeiterator.cmake  treeiterator.cpp  treeiterator.hpp  treeiterator.pri  treeiterator_forward.hpp
emf4cpp.tests/xpand/: CMakeLists.txt  xpand3.cmake  xpand3.cpp  xpand3.hpp  xpand3.pri  xpand3_forward.hpp
emf4cpp/ecore/: EAnnotation.cpp  EAnnotation.hpp  EAnnotationImpl.cpp  EAttribute.cpp  EAttribute.hpp  EAttributeImpl.cpp  EClass.cpp  EClass.hpp  EClassImpl.cpp  EClassifier.cpp  EClassifier.hpp  EClassifierImpl.cpp  EDataType.cpp  EDataType.hpp  EDataTypeImpl.cpp  EEnum.cpp  EEnum.hpp  EEnumImpl.cpp  EEnumLiteral.cpp  EEnumLiteral.hpp  EEnumLiteralImpl.cpp  EFactory.cpp  EFactory.hpp  EFactoryImpl.cpp  EGenericType.cpp  EGenericType.hpp  EGenericTypeImpl.cpp  EModelElement.cpp  EModelElement.hpp  EModelElementImpl.cpp  ENamedElement.cpp  ENamedElement.hpp  ENamedElementImpl.cpp  EObject.cpp  EObject.hpp  EObjectImpl.cpp  EOperation.cpp  EOperation.hpp  EOperationImpl.cpp  EPackage.cpp  (+28 more)
emf4cpp/ecorecpp/: ItemProvider.cpp  ItemProvider.hpp  MetaModelRepository.cpp  MetaModelRepository.hpp  dllEcorecpp.hpp  mapping_forward.hpp  resource_forward.hpp
org.csu.emf4cpp.generator/: CMakeLists.txt  emf4cpp.generator.sh
(+1860 files in other folders)
